testcases fixed again